--- a/bootstrap_toolkit/templates/bootstrap_toolkit/field_widget_input.html
+++ b/bootstrap_toolkit/templates/bootstrap_toolkit/field_widget_input.html
@@ -1,6 +1,6 @@
 {% load bootstrap_toolkit %}
 
 {% with field|bootstrap_input_type as input_type %}
-{% html_attrs field.field.widget.attrs class='form-control' as html_attrs %}
-<input type="{{ input_type }}" id="{{ field.auto_id }}" name="{{ field.html_name }}" value="{{ field.value|default_if_none:'' }}" {{ html_attrs }}>
+{% html_attrs field.field.widget.attrs as html_attrs %}
+<input type="{{ input_type }}" class="form-control{% if input_class %} {{ input_class }}{% endif %}" id="{{ field.auto_id }}" name="{{ field.html_name }}" value="{{ field.value|default_if_none:'' }}" {{ html_attrs }}>
 {% endwith %}
